[package]
name = "website_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
artisan_middleware = "1.5.1"
config = "0.14.0"
dusa_collection_utils = "2.6.3"
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
# Pretty printing
simple_pretty = "0.1.0"
tokio = "1.40.0"
rng = "0.1.0"
rand = "0.8.5"
colored = "2.1.0"
reqwest = "0.12.8"
